# humai_desarrollo

./: README.md  automatic.py  interactive.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: api_call.yml
data/: .~lock.27-11-2022-17-10-29#  27-11-2022-17-01-12  27-11-2022-17-06-01  27-11-2022-17-06-44  27-11-2022-17-07-16  27-11-2022-17-09-33  27-11-2022-17-10-29  27-11-2022-17-26-21  27-11-2022-17-26-25  27-11-2022-17-26-26  27-11-2022-21-30-48  27-11-2022-21-39-30  27-11-2022-21-48-15
humai_desarrollo/: __init__.py  my_etl.py
humai_desarrollo_1/: my_etl.py
