[tool.poetry]
name = "humai-desarrollo-1"
version = "0.1.0"
description = ""
authors = ["gus <gjuantorena@gmail.com>"]
readme = "README.md"
packages = [{include = "humai_desarrollo_1"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
click = "^8.1.3"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
